// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should ignore legacy css prop styles (array) 1`] = `
<div>
  <p
    data-testid="custom-css-array-view"
  >
    <span />
  </p>
</div>
`;

exports[`props should ignore legacy css prop styles (object) 1`] = `
<div>
  <p
    data-testid="custom-css-object-view"
  >
    <span />
  </p>
</div>
`;

exports[`props should ignore legacy css prop styles (string) 1`] = `
<div>
  <p
    data-testid="custom-css-string-view"
  >
    <span />
  </p>
</div>
`;

exports[`props should render as a custom component 1`] = `
<div>
  <section
    class="custom-class"
    data-custom-component="true"
    data-testid="custom-view"
  >
    <span />
  </section>
</div>
`;

exports[`props should render as another element 1`] = `
<div>
  <p>
    <span />
  </p>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div>
    <span />
  </div>
</div>
`;
